[metadata]
name = 'noiseblend_api'
version = '0.0.1'
description = ''
author = 'Alin Panaitiu'
author_email = 'alin.p32@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://gitlab.com/alin23/noiseblend-api'

[requires]
python_version = ['3.7', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
